yyamamoto+sesetup@salesforce.com/src/objects/MenuInfo__c.object
<CustomObject>
    <fields>
        <fullName>ChooseIcon__c</fullName>
        <formula>HYPERLINK(&quot;/apex/vfChooseIcon?item=&quot; &amp;  Id, &quot;[アイコンの選択]&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>アイコンの選択</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomMenuStyle__c</fullName>
        <inlineHelpText>メニュースタイルに&quot;カスタムスタイル&quot;を選択した場合は必須入力となります。
Visualforceページで作成したスタイルシートページ名を指定してください。</inlineHelpText>
        <label>カスタムスタイル</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>説明</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Guide__c</fullName>
        <formula>MenuTitle__c &amp; MenuRefTitle__c &amp; SectionRefMenuTitle__c &amp; &quot;-&quot; &amp; LPAD(TEXT(IF( AND(LEN(MenuRefTitle__c)&gt;0, LEN(SectionRefMenuTitle__c)==0), SectionOrder__c, IF(AND(LEN(MenuRefTitle__c)==0, LEN(SectionRefMenuTitle__c)&gt;0), SectionRefOrder__c, 0))), 2, &quot;0&quot;) &amp; &quot;_&quot; &amp; SectionTitle__c &amp; SectionRefTitle__c&amp; &quot;-&quot; &amp; LPAD(text( ItemOrder__c ), 3, &quot;0&quot;) &amp; &quot;_&quot; &amp; ItemTitle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ガイド</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header__c</fullName>
        <label>ヘッダ</label>
        <picklist>
            <picklistValues>
                <fullName>表示</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>非表示</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IconID__c</fullName>
        <label>アイコンID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IconImage__c</fullName>
        <formula>IF( LEN( IconID__c ) &gt; 0,  IMAGE(&apos;/servlet/servlet.ImageServer?id=&apos; &amp;  IconID__c &amp; &apos;&amp;oid=&apos; &amp; $Organization.Id , &quot;イメージ&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>アイコンイメージ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ItemMenuStyle__c</fullName>
        <formula>CASE( TEXT(SectionRef__r.MenuRef__r.MenuStyle__c)
    , &quot;タイル&quot;, &quot;vfMenuTileCss&quot;
    , &quot;タイル（枠無し）&quot;, &quot;vfMenuTileNBCss&quot;
    , &quot;タイル（小）&quot;, &quot;vfMenuSmallTileCss&quot;
    , &quot;タイル（小）（枠無し）&quot;, &quot;vfMenuSmallTileNBCss&quot;
    , &quot;シンプル&quot;, &quot;vfMenuSimpleCss&quot;
    , &quot;カスタムスタイル&quot;, SectionRef__r.MenuRef__r.CustomMenuStyle__c 
    , &quot;vfMenuTileCss&quot;



)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>メニュースタイル表示</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ItemOrder__c</fullName>
        <label>アイテムの表示順序</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ItemShowHeader__c</fullName>
        <formula>CASE( text( SectionRef__r.MenuRef__r.Header__c )
, &quot;表示&quot;, &quot;true&quot;
, &quot;非表示&quot;, &quot;false&quot;
, &quot;true&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ヘッダ表示</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ItemSideBar__c</fullName>
        <formula>CASE( text(SectionRef__r.MenuRef__r.SideBar__c)
, &quot;表示&quot;, &quot;true&quot;
, &quot;非表示&quot;, &quot;false&quot;
, &quot;true&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>サイドバー表示</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ItemTitle__c</fullName>
        <label>アイテム名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>遷移先リンク</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MenuRefTitle__c</fullName>
        <formula>MenuRef__r.MenuTitle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>所属メニュー名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MenuRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>所属メニュー</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>MenuInfo__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>メニュー</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>MenuInfo__c</referenceTo>
        <relationshipLabel>セクション</relationshipLabel>
        <relationshipName>MenuInfoMenuRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MenuStyle__c</fullName>
        <label>メニュースタイル</label>
        <picklist>
            <picklistValues>
                <fullName>タイル</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>タイル（枠無し）</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>タイル（小）</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>タイル（小）（枠無し）</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>シンプル</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>カスタムスタイル</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MenuTabId__c</fullName>
        <formula>MenuRef__r.TabId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>メニュータブID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MenuTitle__c</fullName>
        <label>メニュー名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SectionMenuTabId__c</fullName>
        <formula>SectionRef__r.MenuTabId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>セクションメニュータブID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SectionOrder__c</fullName>
        <label>セクションの表示順序</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SectionRefMenuTitle__c</fullName>
        <formula>SectionRef__r.MenuRefTitle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>所属メニュー名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SectionRefMenu__c</fullName>
        <formula>SectionRef__r.MenuRef__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>所属メニュー</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SectionRefOrder__c</fullName>
        <formula>SectionRef__r.SectionOrder__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>所属セクションの表示順序</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SectionRefTitle__c</fullName>
        <formula>SectionRef__r.SectionTitle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>所属セクション名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SectionRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>所属セクション</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>MenuInfo__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>セクション</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>MenuInfo__c</referenceTo>
        <relationshipLabel>アイテム</relationshipLabel>
        <relationshipName>MenuInfoSectionRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SectionTitle__c</fullName>
        <label>セクション名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SideBar__c</fullName>
        <label>サイドバー</label>
        <picklist>
            <picklistValues>
                <fullName>表示</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>非表示</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TabId__c</fullName>
        <label>タブID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetWindowName__c</fullName>
        <formula>CASE(TEXT( TargetWindow__c )
    , &quot;自ウィンドウ&quot;, &quot;_self&quot;
    , &quot;新規ウィンドウ&quot;, &quot;_blank&quot;
    , &quot;_self&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>遷移先ウィンドウ名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetWindow__c</fullName>
        <label>遷移先ウィンドウ</label>
        <picklist>
            <picklistValues>
                <fullName>自ウィンドウ</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>新規ウィンドウ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>メニュー情報</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MenuTitle__c</columns>
        <columns>SectionTitle__c</columns>
        <columns>ItemTitle__c</columns>
        <columns>Guide__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>01.すべてのメニュー</label>
    </listViews>
    <nameField>
        <displayFormat>MNU-{00000000}</displayFormat>
        <label>管理ID</label>
        <type>AutoNumber</type>
    </nameField>
    <recordTypes>
        <fullName>Item</fullName>
        <active>true</active>
        <description>③メニューに表示されるアイコンなどを設定します</description>
        <label>アイテム</label>
    </recordTypes>
    <recordTypes>
        <fullName>Menu</fullName>
        <active>true</active>
        <description>①メニュー情報を設定します</description>
        <label>メニュー</label>
    </recordTypes>
    <recordTypes>
        <fullName>Section</fullName>
        <active>true</active>
        <description>②メニューに表示させるセクション(アイテムのグループ情報)を設定します</description>
        <label>セクション</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>chkMenuStyle</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( MenuStyle__c , &quot;カスタムスタイル&quot;),  LEN( CustomMenuStyle__c )==0  )</errorConditionFormula>
        <errorDisplayField>CustomMenuStyle__c</errorDisplayField>
        <errorMessage>メニュースタイルに&quot;カスタムスタイル&quot;を指定した場合は、「カスタムスタイル」項目に、スタイルシートが記述されているVisualforceページ名を入力してください。</errorMessage>
    </validationRules>
</CustomObject>